--- a/Appendices/Results.tex
+++ b/Appendices/Results.tex
@@ -4,42 +4,83 @@
 
 \begin{figure}
     \centering
-    \input{\master/Graphics/move-h.pgf}
-    \caption{move-h}
+    \input{\master/Graphics/ek-move-h.pgf}
+    \caption{move-h effects}
 \end{figure}
 
 \begin{figure}
     \centering
-    \input{\master/Graphics/move-v.pgf}
+    \input{\master/Graphics/ek-move-v.pgf}
         \label{fig:ex:ca:hgma:ex:move-h}
-    \caption{move-v}\label{fig:ex:ca:hgma:ex:disconnected}
+    \caption{move-v effects}\label{fig:ex:ca:hgma:ex:disconnected}
 \end{figure}
 
 \begin{figure}
     \centering
-    \input{\master/Graphics/push-h.pgf}
+    \input{\master/Graphics/ek-push-h.pgf}
         \label{fig:ex:ca:hgma:ex:move-h}
-    \caption{push-h}\label{fig:ex:ca:hgma:ex:disconnected}
+    \caption{push-h effects}\label{fig:ex:ca:hgma:ex:disconnected}
 \end{figure}
 
 \begin{figure}
     \centering
-    \input{\master/Graphics/push-v.pgf}
+    \input{\master/Graphics/ek-push-v.pgf}
         \label{fig:ex:ca:hgma:ex:move-h}
-    \caption{push-v}\label{fig:ex:ca:hgma:ex:disconnected}
+    \caption{push-v effects}\label{fig:ex:ca:hgma:ex:disconnected}
 \end{figure}
 
 \begin{figure}
     \centering
-    \input{\master/Graphics/push-h-goal.pgf}
+    \input{\master/Graphics/ek-push-h-goal.pgf}
         \label{fig:ex:ca:hgma:ex:move-h}
-    \caption{push-h-goal}\label{fig:ex:ca:hgma:ex:disconnected}
+    \caption{push-h-goal effects}\label{fig:ex:ca:hgma:ex:disconnected}
 \end{figure}
 
 \begin{figure}
     \centering
-    \input{\master/Graphics/push-v-goal.pgf}
+    \input{\master/Graphics/ek-push-v-goal.pgf}
         \label{fig:ex:ca:hgma:ex:move-h}
-    \caption{push-v-goal}\label{fig:ex:ca:hgma:ex:disconnected}
+    \caption{push-v-goal effects}\label{fig:ex:ca:hgma:ex:disconnected}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \input{\master/Graphics/pk-move-h.pgf}
+    \caption{move-h preconditions}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \input{\master/Graphics/pk-move-v.pgf}
+        \label{fig:ex:ca:hgma:ex:move-h}
+    \caption{move-v preconditions}\label{fig:ex:ca:hgma:ex:disconnected}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \input{\master/Graphics/pk-push-h.pgf}
+        \label{fig:ex:ca:hgma:ex:move-h}
+    \caption{push-h preconditions}\label{fig:ex:ca:hgma:ex:disconnected}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \input{\master/Graphics/pk-push-v.pgf}
+        \label{fig:ex:ca:hgma:ex:move-h}
+    \caption{push-v preconditions}\label{fig:ex:ca:hgma:ex:disconnected}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \input{\master/Graphics/pk-push-h-goal.pgf}
+        \label{fig:ex:ca:hgma:ex:move-h}
+    \caption{push-h-goal preconditions}\label{fig:ex:ca:hgma:ex:disconnected}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \input{\master/Graphics/pk-push-v-goal.pgf}
+        \label{fig:ex:ca:hgma:ex:move-h}
+    \caption{push-v-goal preconditions}\label{fig:ex:ca:hgma:ex:disconnected}
 \end{figure}
 \end{document}
